cncProd/force-app/main/default/objects/Purchase_Option__c/Purchase_Option__c.object-meta.xml
<CustomObject>
    <description>RA Used Car Purchase option(s) of one Sales Opportunity</description>
    <label>Purchase Option</label>
    <nameField>
        <displayFormat>PUROPT-{0000000}</displayFormat>
        <label>Purchase Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>