cncProd/force-app/main/default/objects/Purchase_Option__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Options</relationshipLabel>
    <relationshipName>Purchase_Options</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>