cncProd/force-app/main/default/objects/Purchase_Option__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Options</relationshipLabel>
    <relationshipName>Purchase_Options</relationshipName>
    <type>Lookup</type>
</CustomField>