cncProd/force-app/main/default/objects/Purchase_Option__c/fields/Purchase_Option_Id__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Option_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Option Id</label>
    <type>Text</type>
</CustomField>