cncProd/force-app/main/default/objects/Purchase_Option__c/recordTypes/RA_Purchase_Option_RT.recordType-meta.xml
<RecordType>
    <fullName>RA_Purchase_Option_RT</fullName>
    <active>true</active>
    <label>RA Purchase Option RT</label>
</RecordType>