cncProd/force-app/main/default/objects/Purchase_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Person_Account_Profiling__c</columns>
    <columns>Contact__c</columns>
    <columns>Sales_Opportunity__c</columns>
    <columns>Used_Car_Vehicle_Stock__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>